fixed issues with page jumping around all the time added some debug capability fixed a problem with problems with only one subtraction step corrected some errors that were introduced when I added 'use strict'

--- a/Divider.css
+++ b/Divider.css
@@ -57,37 +57,40 @@ button {
     //padding-bottom: 10em;
     //width: 60%;
     //width: 43em;
+    vertical-align: top;
     min-width: 40em;
     text-align: center;
     padding-right: 2em;
-    //min-height: 10em;
+    min-height: 58em;
 }
 .d7 {
-    //padding-top: 1em;
+    padding-top: 1em;
     //padding-bottom: 10em;
     //width: 30%;
     width: 20em;
     max-width: 20em;
     text-align: center;
     padding-left: 2em;
-    //min-height: 35em;
+    min-height: 58em;
     //height: 35em;
     //margin: 5em;
     //padding: 5em;
-    //background-color: blue;
+    //background-color: blue; // dbfxt
+    //background-color:  #fdefe0;
 }
 .d3 {
     //padding-top: 1em;
     //padding-bottom: 1em;
-    //min-height: 1em;
+    min-height: 3em;
     //text-align: left;
     text-align: center;
     //margin-top: 1em;
     //padding-left: 5em;
     //min-height: 3em;
     margin-top: 1em;
-    padding-top: 1em;
-    //background-color: orange;
+    //padding-top: 1em;
+    //background-color: orange; // dbfxt
+    //background-color:  #fdefe0;
 }
 .d4 {
     //a1padding-top: 1em;
@@ -104,7 +107,8 @@ button {
     padding-bottom: 2em;
     margin-bottom: 2em;
     //padding-bottom: 5em;
-    //background-color: pink;
+    //background-color: pink; // dbfxt
+    //background-color:  #fdefe0;
 }
 .d5 {
     //margin-top: 7em;
@@ -112,26 +116,28 @@ button {
     //margin: 1em;
     //padding-left: 1em;
     margin-top: 2em;
-    padding-top: 2em;
-    min-height: 9em;
-    max-height: 9em;
-    padding-bottom: 2em;
+    //padding-top: 2em;
+    min-height: 19em;
+    //max-height: 9em;
+    //padding-bottom: 2em;
     margin-bottom: 2em;
 
     text-align: center;
-    //background-color: yellowgreen;
+    //background-color: yellowgreen; // dbfxt
+    //background-color:  #fdefe0;
 }
 .d6 {
     //padding-top: 1em;
     //padding-bottom: 1em;
-    min-height: 1em;
+    min-height: 4em;
     text-align: center;
     //margin-top: 1em;
     //padding-left: 5em;
     //min-height: 3em;
-    margin-top: 5em;
+    //margin-top: 5em;
     //padding-top: 3em;
-    //background-color: purple;
+    //background-color: purple; //dbfxt
+    //background-color:  #fdefe0;
 }
 
 /* table cell with space, carry, or decimal point */
@@ -402,6 +408,7 @@ button {
   margin-top: 0.2em;
   //margin-left: 10%;
   background-color: #eddfd0;
+  top: 10%;
   //min-width: 19em;
   //max-width: 19em;
 /*  width: 192px; */
